--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         <div class="welcomePage">
             <h3>Prologue</h3>
             <p class=intro>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices, turpis id interdum malesuada, felis metus tempor nisl, ut tristique elit neque eget neque. Nunc diam metus, interdum ut dictum vel, aliquet vitae elit. Quisque urna lectus, varius a elementum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
+                Lorem ipsum dolor sit awet, consectetur adipiscing elit. Nam ultrices, turpis id interdum malesuada, felis metus tempor nisl, ut tristique elit neque eget neque. Nunc diam metus, interdum ut dictum vel, aliquet vitae elit. Quisque urna lectus, varius a elementum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
             </p>
             <hr>
             <p class=intro2>
                 99 luft ballons mentum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
             </p>
+            <p class="characterNameEntry">Please enter your character's name:</p>
           </div>
     </body>
 </html>
