--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="assets/css/index.css" type="text/css"/>
+        <link rel="stylesheet" href="css/index.css" type="text/css"/>
         <title>Next in Line</title>
     </head>
     <body>
         <div class="Logo">
-            <img src="assets/next in line.PNG" alt="Logo">
+            <img src="images/next in line.PNG" alt="Logo">
         </div>
         <div class="header">
             <ul>
@@ -26,7 +26,7 @@
             <p class=intro2>
                 99 luft ballons mentum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
             </p>
-            <p class="characterNameEntry">Please enter your character's name:</p>
+            <p class="characterNameEntry">Please enter your character's name: <input type="text" id="inputName"><button onclick="getName()">Enter</button></p>
           </div>
     </body>
 </html>
