--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
         <div class="Logo">
             <img src="images/next in line.PNG" alt="Logo">
         </div>
-        <div class="header">
-            <ul>
-                <li><a href="ContactUs/">Contact Us</a></li>
-                <li><a href="Leaderboard/">Leaderboard</a></li>
-                <li><a href="Suggestions/">Suggestions</a></li>
-                <li><a href="assets/">Assets</a></li>
-            </ul>
-            <hr>
-        </div>
+        <div id="menu">
+            <div class="table">
+              <ul id="horizontal-list">
+                <li><a href="../">Play</a></li>
+                <li><a href="../nextinline/gamesummary.html">Results</a></li>
+                <li><a href="../contactus.html">Contact Us</a></li>
+                <li><a href="../contactus.html">Suggestions</a></li>
+              </ul>
+             </div>
+          </div>
         <div class="welcomePage">
             <h3>Prologue</h3>
             <p class=intro>
-                Lorem ipsum dolor sit awet, consectetur adipiscing elit. Nam ultrices, turpis id interdum malesuada, felis metus tempor nisl, ut tristique elit neque eget neque. Nunc diam metus, interdum ut dictum vel, aliquet vitae elit. Quisque urna lectus, varius a elementum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
+               You are an insurance consultant at a multi-national corporation. You've worked hard and moved up the company chain, it's your job to decide whether an insurance claim is legitimate or not. However, in the pursuit of social-mobility and money; you willingly cheat and scam innocent people from their rightful claims - knowing full well for every claim you reject, you get a bonus. 
             </p>
             <hr>
             <p class=intro2>
-                99 luft ballons mentum vel, auctor ut ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras pretium velit massa, at hendrerit lectus ornare ut. Integer eget orci at lorem vestibulum sollicitudin in et ex. Quisque aliquet pharetra tellus quis accumsan. Aliquam tempus mi pulvinar, malesuada erat eget, blandit ex. Vestibulum vestibulum nisl quis placerat finibus. Aliquam vitae erat ac nisl porttitor auctor nec eu turpis. Duis non nisi porta, mattis metus eget, commodo ipsum. Proin dapibus vitae metus a sodales.
+               After being moved to the Ayr branch one month earlier due to their high, successful claim rates. You have overseen the introduction of persecution to people less fortunate than yourself - purely for your own gain, forgetting where you came from. Your portfolio and savings are the only things going up as you are:<hr><span style="font-size: x-large;color:#FF8917;">Next in Line.</span><hr>
             </p>
             <p class="characterNameEntry">Please enter your character's name: <input type="text" id="inputName"><button onclick="homePagePrintName()">Enter</button></p>
             <p id="playerName" class="nameOfPlayer"></p>
