--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div id="menu">
             <div class="table">
               <ul id="horizontal-list">
-                <li><a href="../">Play</a></li>
-                <li><a href="../nextinline/gamesummary.html">Results</a></li>
-                <li><a href="../contactus.html">Contact Us</a></li>
-                <li><a href="../contactus.html">Suggestions</a></li>
+                <li><a href="https://aidan428.github.io/CYOAWebTech/">Play</a></li>
+                <li><a href="https://aidan428.github.io/CYOAWebTech/nextinline/gamesummary.html">Results</a></li>
+                <li><a href="https://aidan428.github.io/CYOAWebTech/contactus.html">Contact Us</a></li>
+                <li><a href="https://aidan428.github.io/CYOAWebTech/contactus.html">Suggestions</a></li>
               </ul>
              </div>
           </div>
