--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
             <p class="characterNameEntry">Please enter your character's name: <input type="text" id="inputName"><button onclick="homePagePrintName()">Enter</button></p>
             <p id="playerName" class="nameOfPlayer"></p>
-            <div id="clickPlay" style="display:none"><button class="playButton"><a href="nextinline/nextinline.html">Play!</a></button></div>
+            <div id="clickPlay" style="display:none"><button class="playButton"><a href="https://aidan428.github.io/CYOAWebTech/nextinline/nextinline.html">Play!</a></button></div>
           </div>
     </body>
 </html>
