--- a/nextinline/nextinline.html
+++ b/nextinline/nextinline.html
@@ -8,12 +8,12 @@
             <div class="logo">
                 <img src="../images/next in line.PNG" alt="Logo">
             </div>
-            <audio id="player" autoplay loop> 
+            <audio id="player" class="player2" autoplay loop> 
                 <source src="../sounds/beepboxMusic.mp3" type="audio/mpeg"> 
             </audio> 
-            <div>
-                <button onclick="document.getElementById('player').play()">Play</button>
-                <button onclick="document.getElementById('player').pause()">Pause</button>
+            <div class="buttons">
+                <button onclick="document.getElementById('player').play()">Play Music</button>
+                <button onclick="document.getElementById('player').pause()">Pause Music</button>
             </div>
             <hr>
             <div class="container">
