--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class=intro2>
                After being moved to the Ayr branch one month earlier due to their high, successful claim rates. You have overseen the introduction of persecution to people less fortunate than yourself - purely for your own gain, forgetting where you came from. Your portfolio and savings are the only things going up as you are:<hr><span style="font-size: x-large;color:#FF8917;">Next in Line.</span><hr>
             </p>
-            <p class="characterNameEntry">Please enter your character's name: <input type="text" id="inputName"><button onclick="homePagePrintName()">Enter</button></p>
+            <p class="characterNameEntry">Please enter your character's name: <input type="text" id="inputName"><button class="enterButton" onclick="homePagePrintName()">Enter</button></p>
             <p id="playerName" class="nameOfPlayer"></p>
             <div id="clickPlay" style="display:none"><button class="playButton"><a href="https://aidan428.github.io/CYOAWebTech/nextinline/nextinline.html">Play!</a></button></div>
           </div>
