Corrected spelling mistake

--- a/nextinline/gamesummary.html
+++ b/nextinline/gamesummary.html
@@ -20,7 +20,7 @@
            </div>
         </div>
         <div id="resultsHeader">
-          <p><h3>This page will show your most recent final score of the game and wheter you managed to complete it or not</h3></p>
+          <p><h3>This page will show your most recent final score of the game and whether you managed to complete it or not</h3></p>
         </div>
         <hr>
         <div id="results">
