--- a/nextinline/nextinline.html
+++ b/nextinline/nextinline.html
@@ -9,7 +9,7 @@
                 <img src="../images/next in line.PNG" alt="Logo">
             </div>
             <audio id="player" class="player2" autoplay loop> 
-                <source src="../sounds/beepboxMusic.mp3" type="audio/mpeg"> 
+                <source src="../sounds/confess.mp3" type="audio/mpeg"> 
             </audio> 
             <div class="buttons">
                 <button onclick="document.getElementById('player').play()">Play Music</button>
